pop: fix flex-direction not being set on firefox

--- a/src/components/pop/pop.scss
+++ b/src/components/pop/pop.scss
@@ -10,6 +10,7 @@ uex-pop {
   border-radius: 6px;
   z-index: 1042;
   display: flex;
+  flex-flow: column nowrap;
 }
 
 .uex-pop.ng-enter {
